add solutions branch

--- a/ex04.md
+++ b/ex04.md
@@ -10,7 +10,7 @@ Pour pallier ce point, nous allons les avertir sur Slack.
 Pour cela, envoyer un message sur le channel slack du slot, en indiquant que vous (auteur du commit git) avez publié une image docker (avec son nom complet)
 
 Le code d'une action pour notifier Slack est disponible sur la branche `feature/slack-notif`  
-Vous pouvez le récupérer dans votre branche.
+Vous pouvez le récupérer tel quel dans votre branche en prenant tout le répertoire `actions` (cf [Un indice chez vous](#un-indice-chez-vous))
 
 Après avoir jeté un oeil sur le code source, vous vous apercevrez que le fichier qui permet de décrire l'action est fortement incomplet : `action.yml`  
 Si vous la testez en l'état, vous aurez des erreurs (Allez-y, voir les erreurs remontées ne fait jamais de mal).  
@@ -20,12 +20,10 @@ Pour aller plus loin, vous pouvez également afficher des messages différents s
 
 ### Contraintes 
 - Il n'est pas nécessaire de publier l'action pour qu'elle fonctionne. Dans notre cas, nous l'utiliserons en local.
-- Pour publier dans SLACK, vos administrateurs préférés vous mettent à disposition des variables secrètes : 
-  - `SLACK_BOT_TOKEN` qui contient le token nécessaire à l'authentification du bot
-  - `SLACK_CHANNEL` qui contient le channel dans lequel va écrire le bot (il n'est enregistré que sur celui-ci, donc ne tentez pas de modifier cette valeur :) )
-  - `SLACK_BOT` : l'emmeteur du message qui sera envoyé. Vous pouvez surcharger cette valeur.
+- Pour publier dans SLACK, vos administrateurs préférés vous mettent à disposition un token : 
+  - `SLACK_TOKEN` qui contient le token nécessaire à l'authentification du bot
   
-### Un indice chez vous !
+### Un indice chez vous
 - Pour récupérer juste une partie d'une autre branche, vous pouvez tout simplement utiliser `git checkout` en spécifiant le chemin des fichiers souhaités :  `git checkout <branch> <path>`
 
 # Documentation
