--- a/ex03.md
+++ b/ex03.md
@@ -21,10 +21,10 @@ Puis ouvrez votre navigateur à l'adresse `http://localhost`
 
 ### Contraintes 
 - Pour vous autentifier, vous aurez besoin de créer des secrets (parce que non, on n'indique pas ses identifiants docker en clair ! Non, vraiment.). Les valeurs à utiliser seront disponibles dans le channel Slack #xke-github-actions  
-Merci de créer des noms de secrets que vous pourrez identifier simplement et qui vous sont propres, afin d'éviter les collisions !  
-Vous aurez besoin de 2 secrets : un nom d'utilisateur et un mot de passe. Les valeurs vous seront transmises lors de la session
+- Merci de créer des noms de secrets que vous pourrez identifier simplement et qui vous sont propres, afin d'éviter les collisions !  
+- Vous aurez besoin de 2 secrets : un nom d'utilisateur et un mot de passe. Les valeurs vous seront transmises lors de la session
 
-### Un indice chez vous !
+### Un indice chez vous
  - Avant de pousser une image, il faut s'authentifier auprès du registre ! 
 ```
 docker login <registre_docker>
