--- a/ex04.md
+++ b/ex04.md
@@ -20,10 +20,8 @@ Pour aller plus loin, vous pouvez également afficher des messages différents s
 
 ### Contraintes 
 - Il n'est pas nécessaire de publier l'action pour qu'elle fonctionne. Dans notre cas, nous l'utiliserons en local.
-- Pour publier dans SLACK, vos administrateurs préférés vous mettent à disposition des variables secrètes : 
+- Pour publier dans SLACK, vos administrateurs préférés vous mettent à disposition un token : 
   - `SLACK_BOT_TOKEN` qui contient le token nécessaire à l'authentification du bot
-  - `SLACK_CHANNEL` qui contient le channel dans lequel va écrire le bot (il n'est enregistré que sur celui-ci, donc ne tentez pas de modifier cette valeur :) )
-  - `SLACK_BOT` : l'emmeteur du message qui sera envoyé. Vous pouvez surcharger cette valeur.
   
 ### Un indice chez vous !
 - Pour récupérer juste une partie d'une autre branche, vous pouvez tout simplement utiliser `git checkout` en spécifiant le chemin des fichiers souhaités :  `git checkout <branch> <path>`
