--- a/ex05.md
+++ b/ex05.md
@@ -9,7 +9,7 @@ Manque de pot, Node 8 commence déjà à être dépassée (ah bon ?)
 Du coup, ca serait plutôt sympa de préparer une migration vers Node 10, voire 12.  
 Mais plutôt que faire un big bang et délaisser la version actuelle (on a peut-être des vrais utilisateurs, quelque part...), on va builder les deux.  
 
-On va donc revoir le worflow pour builder en une fois les versions de l'application avec node 8 et node 10.
+On va donc revoir le workflow pour builder en une fois les versions de l'application avec node 8 et node 10.
 
 **Note: ** Si vous aimez vraiment node 8, vous pouvez également tenter de construire votre image sur ubuntu et windows/macOs :)
 
